--- a/voter/src/styles/quiz.css
+++ b/voter/src/styles/quiz.css
@@ -19,6 +19,9 @@ body {
   border: none; /* Remove default button border */
   transform: translateY(-50%);
 }
+.circular-button.clicked {
+  background-color: #ffc107; /* Change the color to the desired highlight color */
+}
 .rating {
   display: flex;
   justify-content: center;
@@ -69,4 +72,30 @@ body {
 
 .prev:active {
   scale: 0.95;
+}
+/* Styles for the navigation bar */
+.navbar {
+  /* background-color: #333; */
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.navbar a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 20px;
+  text-decoration: none;
+}
+
+/* Change the color of links on hover */
+.navbar a:hover {
+  background-color: #ddd; /* Light gray background on hover */
+  color: black;
+}
+
+.votesmart {
+  font-weight: bold; /* Increased font weight */
+  font-size: 20px; /* Increased font size */
 }
