--- a/voter/src/styles/results.css
+++ b/voter/src/styles/results.css
@@ -73,3 +73,29 @@ body {
   width: 150px;
   height: 50px;
 }
+/* Styles for the navigation bar */
+.navbar {
+  /* background-color: #333; */
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.navbar a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 20px;
+  text-decoration: none;
+}
+
+/* Change the color of links on hover */
+.navbar a:hover {
+  background-color: #ddd; /* Light gray background on hover */
+  color: black;
+}
+
+.votesmart {
+  font-weight: bold; /* Increased font weight */
+  font-size: 20px; /* Increased font size */
+}
